SM-1 added basic CSS and HTML

--- a/src/main/resources/templates/recipeOverview.html
+++ b/src/main/resources/templates/recipeOverview.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="NL-nl" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org">
+<html lang="NL-nl" xmlns:th="https://www.thymeleaf.org">
 <head th:replace="fragments/general :: baseHeader(~{:: title})">
     <title></title>
 </head>
 <body>
-<div>
+<div class="container">
     <h1>Recipe Overview</h1>
-    <table>
+    <table class="table">
         <tr>
             <th>Recipe Name</th>
         </tr>
