--- a/src/main/resources/templates/recipeDetails.html
+++ b/src/main/resources/templates/recipeDetails.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="NL-nl" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org">
 <head th:replace="fragments/general :: baseHeader(~{:: title})">
-  <title></title>
+    <title></title>
 </head>
 <body>
 
 <div class="container">
+
+    <h1><span th:text="${recipe.recipeName}"></span></h1>
+
+    <p><span th:text="${recipe.description}"></span></p>
 
 </div>
 
