SM-47 added nav-bar for all pages with 'all recipes' link

--- a/src/main/resources/templates/recipeOverview.html
+++ b/src/main/resources/templates/recipeOverview.html
@@ -4,7 +4,11 @@
     <title></title>
 </head>
 <body>
+
 <div class="container">
+
+    <div th:replace="fragments/general :: navbar"></div>
+
     <h1>Recipe Overview</h1>
     <table class="table">
         <tr>
