--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -8,8 +8,21 @@
 </head>
 <body>
 
-<div th:fragment="bottomScripts">
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="navbar">
+
+  <div class="collapse navbar-collapse">
+    <ul class="navbar-nav mr-auto">
+
+      <li class="nav-item active">
+        <a class="nav-link" th:href="@{/recipes}">All recipes</a>
+      </li>
+
+    </ul>
+  </div>
+</nav>
+
+<div th:fragment="bottomScripts">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script type="application/css" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
