--- a/src/main/resources/templates/recipeDetails.html
+++ b/src/main/resources/templates/recipeDetails.html
@@ -7,6 +7,8 @@
 
 <div class="container">
 
+    <div th:replace="fragments/general :: navbar"></div>
+
     <h1><span th:text="${recipe.recipeName}"></span></h1>
 
     <p><span th:text="${recipe.description}"></span></p>
