SM-45 implemented recipe-service and basic data seeding

--- a/src/main/resources/templates/recipeDetails.html
+++ b/src/main/resources/templates/recipeDetails.html
@@ -15,9 +15,9 @@
         <tr>
             <th> Ingredients </th>
         </tr>
-        <tr th:each="ingredient : ${recipe.likes}">
-            <td th:text="${ingredient.ingredientName}"></td>
-        </tr>
+<!--        <tr th:each="ingredient : ${recipe.likes}">-->
+<!--            <td th:text="${ingredient.ingredientName}"></td>-->
+<!--        </tr>-->
     </table>
 
 </div>
