SM-45 and SM-46 added service and seeding for Ingredient and added quantity tooling

--- a/src/main/resources/templates/recipeDetails.html
+++ b/src/main/resources/templates/recipeDetails.html
@@ -17,8 +17,8 @@
         <tr>
             <th> Ingredients </th>
         </tr>
-<!--        <tr th:each="ingredient : ${recipe.likes}">-->
-<!--            <td th:text="${ingredient.ingredientName}"></td>-->
+<!--        <tr th:each="ingredientQuantity : ${recipe.ingredientQuantities}">-->
+<!--            <td th:text="${ingredientQuantity.ingredient.ingredientName}"></td>-->
 <!--        </tr>-->
     </table>
 
