--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -17,6 +17,13 @@
       <li class="nav-item active">
         <a class="nav-link" th:href="@{/recipes}">All recipes</a>
       </li>
+
+      <li class="nav-item active">
+        <a class="nav-link" th:href="@{/user/new}" sec:authorize="isAnonymous()">Register</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" th:href="@{/login}" sec:authorize="isAnonymous()">Log in</a>
+      </li>
       <li class="nav-item active">
         <a class="nav-link" th:href="@{/logout}" sec:authorize="isAuthenticated()">Logout</a>
       </li>
