--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -17,6 +17,9 @@
       <li class="nav-item active">
         <a class="nav-link" th:href="@{/recipes}">All recipes</a>
       </li>
+      <li>
+        <a class="nav-link" th:href="@{/MyKitchen/dummieChef}">My Kitchen</a>
+      </li>
 
       <li class="nav-item active">
         <a class="nav-link" th:href="@{/user/new}" sec:authorize="isAnonymous()">Register</a>
