--- a/src/main/resources/templates/myKitchen.html
+++ b/src/main/resources/templates/myKitchen.html
@@ -9,12 +9,7 @@
     <div th:replace="fragments/general :: navbar"></div>
 
     <h1>My kitchen</h1>
-    <h2><span th:text="${user.username}"></span></h2>
-
-
-    <p>
-        Current User: <span th:text="${#authentication.name}"></span>
-    </p>
+    <h2><span th:text="${user.username}"></span>'s recipes</h2>
 
     <br>
 
