SM-2 added New Recipe in the nav-bar

--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -18,6 +18,9 @@
         <a class="nav-link" th:href="@{/recipes}">All recipes</a>
       </li>
       <li class="nav-item active">
+        <a class="nav-link" th:href="@{/recipes/new}" sec:authorize="isAuthenticated()">New recipe</a>
+      </li>
+      <li class="nav-item active">
         <a class="nav-link" th:href="@{/MyKitchen}" sec:authorize="isAuthenticated()">My Kitchen</a>
       </li>
 
