SM-53 review & made sure user doesn't get linked to update page of recipes that are not their own

--- a/src/main/resources/templates/updateRecipeForm.html
+++ b/src/main/resources/templates/updateRecipeForm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="NL-nl" xmlns:th="https://www.thymeleaf.org" xmlns:sec="https://www.thymeleaf.org">
 <head th:replace="fragments/general :: baseHeader(~{:: title})">
-    <title>Add new recipe</title>
+    <title>Update recipe</title>
 </head>
 <body>
 <div class="container">
