--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -5,11 +5,13 @@
   <title th:replace="${title}">baseTitle</title>
   <link th:rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" type="text/css" href="/css/socialmeals.css" >
+
 </head>
 <body>
 
+<div class="header-photo" th:fragment="headerPhoto"></div>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="navbar">
+<nav class="navbar navbar-expand-lg navbar-light" th:fragment="navbar">
 
   <div class="collapse navbar-collapse">
     <ul class="navbar-nav mr-auto">
@@ -23,7 +25,9 @@
       <li class="nav-item active">
         <a class="nav-link" th:href="@{/MyKitchen}" sec:authorize="isAuthenticated()">My Kitchen</a>
       </li>
+      </ul>
 
+    <ul class="navbar-nav mr-auto navbar-push">
       <li class="nav-item active">
         <a class="nav-link" th:href="@{/user/new}" sec:authorize="isAnonymous()">Register</a>
       </li>
@@ -33,7 +37,6 @@
       <li class="nav-item active">
         <a class="nav-link" th:href="@{/logout}" sec:authorize="isAuthenticated()">Logout</a>
       </li>
-
     </ul>
   </div>
 </nav>
