SM-59 added beginning of header

--- a/src/main/resources/templates/fragments/emptyFile.html
+++ b/src/main/resources/templates/fragments/emptyFile.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 
+<div th:replace="fragments/general :: headerPhoto"></div>
+
 <div class="container">
   <div th:replace="fragments/general :: navbar"></div>
 
