--- a/src/main/resources/templates/recipeForm.html
+++ b/src/main/resources/templates/recipeForm.html
@@ -4,6 +4,8 @@
     <title>Add new recipe</title>
 </head>
 <body>
+
+<div th:replace="fragments/general :: headerPhoto"></div>
 <div class="container">
     <div th:replace="fragments/general :: navbar"></div>
 
