--- a/src/main/resources/templates/updateRecipeForm.html
+++ b/src/main/resources/templates/updateRecipeForm.html
@@ -4,6 +4,7 @@
     <title>Update recipe</title>
 </head>
 <body>
+<div th:replace="fragments/general :: headerPhoto"></div>
 <div class="container">
     <div th:replace="fragments/general :: navbar"></div>
 
