--- a/src/main/resources/templates/recipeDetails.html
+++ b/src/main/resources/templates/recipeDetails.html
@@ -5,6 +5,7 @@
 </head>
 <body>
 
+<div th:replace="fragments/general :: headerPhoto"></div>
 <div class="container">
 
     <div th:replace="fragments/general :: navbar"></div>
