--- a/src/main/resources/static/css/socialmeals.css
+++ b/src/main/resources/static/css/socialmeals.css
@@ -10,9 +10,10 @@ body {
 
 .header-photo {
     background-image: url("https://cdn.pixabay.com/photo/2016/11/23/18/31/pasta-1854245_960_720.jpg");
-    width: 70%;
-    height: 20%;
-    margin-left: 15%;
+    width: 122%;
+    height: 20em;
+    margin-left: -11%;
+    margin-top: -15%;
 }
 
 .container {
@@ -32,7 +33,7 @@ h1 {
 }
 
 .navbar {
-    background-color: transparent;
+    background-color: white;
     width: 100%;
     margin-top: -10%;
     padding: 2%;
@@ -59,9 +60,30 @@ h1 {
     width: 30%;
 }
 
+.updateRecipe {
+    margin-left: 10%;
+    width: 100%;
+}
+
+.updateIngredients {
+    width: 100%;
+    margin-right: -20%;
+}
+
+.existingRecipe {
+    margin-top: 5%;
+    margin-left: 10%;
+    width: 30%;
+}
+
+.addedIngredients {
+    margin-top: 5%;
+    margin-left: 20%;
+    width: 40%;
+}
+
 .form-group {
     text-align: left;
-    padding: 20px;
 }
 
 .form-control {
