--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -5,7 +5,6 @@
   <title th:replace="${title}">baseTitle</title>
   <link th:rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"/>
   <link rel="stylesheet" type="text/css" href="/css/socialmeals.css" >
-
 </head>
 <body>
 
@@ -17,10 +16,10 @@
     <ul class="navbar-nav mr-auto">
 
       <li class="nav-item active">
-        <a class="nav-link" th:href="@{/recipes}">All recipes</a>
+        <a class="nav-link" th:href="@{/recipes}">Recipes</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" th:href="@{/recipes/new}" sec:authorize="isAuthenticated()">New recipe</a>
+        <a class="nav-link" th:href="@{/recipes/new}" sec:authorize="isAuthenticated()">New</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" th:href="@{/MyKitchen}" sec:authorize="isAuthenticated()">My Kitchen</a>
