--- a/src/main/resources/templates/recipeOverview.html
+++ b/src/main/resources/templates/recipeOverview.html
@@ -5,13 +5,11 @@
 </head>
 <body>
 
-<div th:replace="fragments/general :: headerPhoto"></div>
-
 <div class="container">
 
+    <div th:replace="fragments/general :: headerPhoto"></div>
     <div th:replace="fragments/general :: navbar"></div>
-
-    <h1>Recipe Overview</h1>
+    <h1>Recipes</h1>
     <table class="table">
         <tr>
             <th>Recipe Name</th>
