--- a/src/main/resources/templates/updateRecipeForm.html
+++ b/src/main/resources/templates/updateRecipeForm.html
@@ -4,45 +4,87 @@
     <title>Update recipe</title>
 </head>
 <body>
-<div th:replace="fragments/general :: headerPhoto"></div>
+
 <div class="container">
+
+    <div th:replace="fragments/general :: headerPhoto"></div>
     <div th:replace="fragments/general :: navbar"></div>
 
-    <form class="has-validation" th:action="@{/recipes/update/{recipeName}(recipeName=${recipeDTO.recipeName})}" method="post" th:object="${recipeDTO}">
-        <div th:replace="fragments/forms :: recipeForm"></div>
-    </form>
+    <div class="flex">
+        <div class="existingRecipe">
+            <table class="table">
+                <tr>
+                    <th> Recipe</th>
+                </tr>
+                <tr>
+                    <td th:text="${recipeDTO.recipeName}"></td>
 
-    <table class="table">
-        <tr>
-            <th> Quantity </th>
-            <th> Ingredient </th>
-        </tr>
-        <tr th:each="ingredientRecipe : ${presentIngredientsRecipes}">
-            <td th:text="${ingredientRecipe.quantity + ' ' + ingredientRecipe.quantityType}" ></td>
-            <td th:text="${ingredientRecipe.ingredientDTO.ingredientName}"></td>
-        </tr>
-    </table>
+                </tr>
+                <tr>
+                    <td th:text="'Step 1 ' + ${recipeDTO.steps[0]}"></td>
+                </tr>
+                <tr>
+                    <td th:text="'Step 2 ' + ${recipeDTO.steps[1]}"></td>
+                </tr>
+                <td th:text="'Step 3 ' + ${recipeDTO.steps[2]}"></td>
+                <tr>
 
-    <form class="has-validation" th:action="@{/recipes/{recipeName}/addingredient(recipeName=${recipeDTO.recipeName})}" method="post" th:object="${ingredientRecipeDTO}">
-        <div class="form-group">
-            <label for="quantity">Quantity</label>
-            <input class = form-control type="number" id="quantity" th:field="*{quantity}">
+                </tr>
+            </table>
         </div>
 
-        <div class="form-group">
-            <label for="quantitytype">Quantity type</label>
-            <input class = form-control type="text" id="quantitytype" th:field="*{quantityType}">
+        <div class="addedIngredients">
+            <table class="table">
+                <tr>
+                    <th> Ingredient</th>
+                </tr>
+                <tr th:each="ingredientRecipe : ${presentIngredientsRecipes}">
+                    <td th:text="${ingredientRecipe.ingredientDTO.ingredientName} + ' '
+                    + ${ingredientRecipe.quantity + ' ' + ingredientRecipe.quantityType}"></td>
+                </tr>
+            </table>
+        </div>
+    </div>
+
+    <h1>Update</h1>
+
+    <div class="flex">
+
+
+        <div class="updateRecipe">
+            <form class="has-validation" th:action="@{/recipes/update/{recipeName}(recipeName=${recipeDTO.recipeName})}"
+                  method="post" th:object="${recipeDTO}">
+                <div th:replace="fragments/forms :: recipeForm"></div>
+            </form>
         </div>
 
-        <select name="ingredientName">
-            <option value="">Select Ingredient</option>
-            <option th:each="ingredient : ${remainingIngredients}" th:value="${ingredient.ingredientName}" th:text="${ingredient.ingredientName}"></option>
-        </select>
+        <div class="updateIngredients">
+            <form class="has-validation"
+                  th:action="@{/recipes/{recipeName}/addingredient(recipeName=${recipeDTO.recipeName})}" method="post"
+                  th:object="${ingredientRecipeDTO}">
+                <div class="form-group">
+                    <label for="quantity">Quantity</label>
+                    <input class=form-control type="number" id="quantity" th:field="*{quantity}">
+                </div>
 
-        <div class="form-group">
-            <button type="submit" class="btn btn-primary">Save</button>
+                <div class="form-group">
+                    <label for="quantitytype">Quantity type</label>
+                    <input class=form-control type="text" id="quantitytype" th:field="*{quantityType}">
+                </div>
+
+                <select name="ingredientName">
+                    <option value="">Select Ingredient</option>
+                    <option th:each="ingredient : ${remainingIngredients}" th:value="${ingredient.ingredientName}"
+                            th:text="${ingredient.ingredientName}"></option>
+                </select>
+
+                <div class="form-group">
+                    <button type="submit" class="btn btn-primary">Save</button>
+                </div>
+            </form>
         </div>
-    </form>
+    </div>
+
 </div>
 
 <div th:replace="fragments/general :: bottomScripts"></div>
