SM-55 added a search recipe function

--- a/src/main/resources/templates/recipeOverview.html
+++ b/src/main/resources/templates/recipeOverview.html
@@ -20,6 +20,12 @@
             <td><a th:href="@{/recipes/{recipeName}(recipeName=${recipe.recipeName})}" th:text="${recipe.recipeName}"></a></td>
         </tr>
     </table>
+
+    <h2>Search recipe</h2>
+    <form th:action="@{/recipes/}">
+        <input type="text" name="search"/>
+        <input type="submit" value="Search"/>
+    </form>
 </div>
 
 <div th:replace="fragments/general :: bottomScripts"></div>
