--- a/src/main/resources/templates/recipeOverview.html
+++ b/src/main/resources/templates/recipeOverview.html
@@ -20,8 +20,8 @@
     </table>
 
     <h2>Search recipe</h2>
-    <form th:action="@{/recipes/}">
-        <input type="text" name="search"/>
+    <form th:action="@{/recipes/search}">
+        <input type="text" name="keyword"/>
         <input type="submit" value="Search"/>
     </form>
 </div>
