SM-60 small design update

--- a/src/main/resources/templates/recipeOverview.html
+++ b/src/main/resources/templates/recipeOverview.html
@@ -21,8 +21,8 @@
 
     <h2>Search recipe</h2>
     <form th:action="@{/recipes/search}">
-        <input type="text" name="keyword"/>
-        <input type="submit" value="Search"/>
+        <input class="form-group" type="text" name="keyword"/>
+        <input type="submit" class="btn btn-primary" value="Search"/>
     </form>
 </div>
 
