SM-55 added cookbook public to other users and changable for your own, myKitchen has a 'My cookbook' now, recipe has a link to the maker for logged in users

--- a/src/main/resources/templates/recipeDetails.html
+++ b/src/main/resources/templates/recipeDetails.html
@@ -13,8 +13,14 @@
 
     <h1><span th:text="${recipe.recipeName}"></span></h1>
 
-    <div class="flex">
+    <p>
+        made by
+        <a th:href="@{/Cookbook/{username}(username = ${recipe.socialMealsUserDTO.username})}" th:text="${recipe.socialMealsUserDTO.username}" sec:authorize="isAuthenticated()"></a>
+        <span th:text="${recipe.socialMealsUserDTO.username}" sec:authorize="isAnonymous()"></span>
+        <br>
+    </p>
 
+    <div class="flex">
 
         <div class="recipeSteps">
             <p><span text="Cooking instruction"></span></p>
