--- a/src/main/resources/templates/recipeOverview.html
+++ b/src/main/resources/templates/recipeOverview.html
@@ -20,8 +20,8 @@
     </table>
 
     <h2>Search recipe</h2>
-    <form th:action="@{/recipes/search}">
-        <input class="form-group" type="text" name="keyword"/>
+    <form class="searchRecipe" th:action="@{/recipes/search}">
+        <input type="text" name="keyword"/>
         <input type="submit" class="btn btn-primary" value="Search"/>
     </form>
 </div>
