--- a/src/main/resources/templates/myCookbook.html
+++ b/src/main/resources/templates/myCookbook.html
@@ -22,7 +22,7 @@
             <td><a th:href="@{/recipes/{recipeName}(recipeName=${recipe.recipeName})}" th:text="${recipe.recipeName}"></a></td>
             <td><a th:href="@{/recipes/update/{recipeName}(recipeName=${recipe.recipeName})}" th:if="${ownRecipe}">Update</a></td>
             <td><a onclick="return confirm('Are you sure?')"
-                   th:href="@{/deleteRecipe(recipeName=${recipe.recipeName})}" th:if="${ownRecipe}">Delete</a></td>
+                   th:href="@{/recipes/delete/{recipeName}(recipeName=${recipe.recipeName})}" th:if="${ownRecipe}">Delete</a></td>
         </tr>
 
     </table>
