--- a/src/main/resources/templates/fragments/forms.html
+++ b/src/main/resources/templates/fragments/forms.html
@@ -12,19 +12,19 @@
     <div th:fragment="recipeForm">
         <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" class="form-control" id="name" th:field="*{recipeName}" required>
+            <input type="text" class="form-control form-control-with" id="name" th:field="*{recipeName}" required>
         </div>
         <div class="form-group">
             <label for="step1">Step 1</label>
-            <input type="text" class="form-control" th:field="*{steps[0]}" id="step1" />
+            <input type="text" class="form-control form-control-with" th:field="*{steps[0]}" id="step1" />
         </div>
         <div class="form-group">
             <label for="step2">Step 2</label>
-            <input type="text" class="form-control" th:field="*{steps[1]}" id="step2" />
+            <input type="text" class="form-control form-control-with" th:field="*{steps[1]}" id="step2" />
         </div>
         <div class="form-group">
             <label for="step3">Step 3</label>
-            <input type="text" class="form-control" th:field="*{steps[2]}" id="step3" />
+            <input type="text" class="form-control form-control-with" th:field="*{steps[2]}" id="step3" />
         </div>
         <div class="form-group">
             <button type="submit" class="btn btn-primary">Save</button>
