--- a/src/main/resources/templates/updateRecipeForm.html
+++ b/src/main/resources/templates/updateRecipeForm.html
@@ -23,11 +23,11 @@
                 <tr>
                     <td th:text="'Step 1 ' + ${recipeDTO.steps[0]}"></td>
                 </tr>
-                <tr>
-                    <td th:text="'Step 2 ' + ${recipeDTO.steps[1]}"></td>
-                </tr>
-                <td th:text="'Step 3 ' + ${recipeDTO.steps[2]}"></td>
-                <tr>
+<!--                <tr>-->
+<!--                    <td th:text="'Step 2 ' + ${recipeDTO.steps[1]}"></td>-->
+<!--                </tr>-->
+<!--                <td th:text="'Step 3 ' + ${recipeDTO.steps[2]}"></td>-->
+<!--                <tr>-->
 
                 </tr>
             </table>
