--- a/src/main/resources/templates/updateRecipeForm.html
+++ b/src/main/resources/templates/updateRecipeForm.html
@@ -18,7 +18,6 @@
                 </tr>
                 <tr>
                     <td th:text="${recipeDTO.recipeName}"></td>
-
                 </tr>
                 <tr>
                     <td th:text="'Step 1 ' + ${recipeDTO.steps[0]}"></td>
@@ -26,9 +25,8 @@
                 <tr>
                     <td th:text="'Step 2 ' + ${recipeDTO.steps[1]}"></td>
                 </tr>
-                <td th:text="'Step 3 ' + ${recipeDTO.steps[2]}"></td>
                 <tr>
-
+                    <td th:text="'Step 3 ' + ${recipeDTO.steps[2]}"></td>
                 </tr>
             </table>
         </div>
@@ -72,11 +70,10 @@
                     <input class=form-control type="text" id="quantitytype" th:field="*{quantityType}">
                 </div>
 
-                <select name="ingredientName">
-                    <option value="">Select Ingredient</option>
-                    <option th:each="ingredient : ${remainingIngredients}" th:value="${ingredient.ingredientName}"
-                            th:text="${ingredient.ingredientName}"></option>
-                </select>
+                <div class="form-group">
+                    <label for="ingredientAuto">Ingredient</label>
+                    <input class=form-control name="ingredientName" id="ingredientAuto">
+                </div>
 
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary">Save</button>
@@ -88,5 +85,6 @@
 </div>
 
 <div th:replace="fragments/general :: bottomScripts"></div>
+
 </body>
 </html>
