--- a/src/main/resources/templates/recipeForm.html
+++ b/src/main/resources/templates/recipeForm.html
@@ -20,10 +20,13 @@
             <input type="text" class="form-control" th:field="*{steps[__${iter.index}__]}" id="step1" />
         </div>
         <div class="form-group">
-            <button type="submit" class="btn btn-primary" name="add">Add New</button>
+            <button type="submit" class="btn btn-primary" name="add">Add Step</button>
         </div>
         <div class="form-group">
             <button type="submit" class="btn btn-primary" name="submit">Submit</button>
+        </div>
+        <div th:if="${existingRecipe != null}" class="alert alert-danger notification" role="alert">
+            <p th:text="${existingRecipe.recipeName} + ' already exists'"></p>
         </div>
         
 <!--        <div th:replace="fragments/forms :: recipeForm"></div>-->
