--- a/src/main/resources/templates/updateRecipeForm.html
+++ b/src/main/resources/templates/updateRecipeForm.html
@@ -61,6 +61,9 @@
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary" name="save">Save</button>
                 </div>
+                <div th:if="${existingRecipe != null}" class="alert alert-danger notification" role="alert">
+                    <p th:text="${existingRecipe.recipeName} + ' already exists'"></p>
+                </div>
             </form>
         </div>
 
