SM-32 recipe lists on main page and in cookbook are sorted on alphabetic order

--- a/src/main/resources/templates/recipeOverview.html
+++ b/src/main/resources/templates/recipeOverview.html
@@ -19,6 +19,8 @@
 
     <br>
 
+    <span class="navbar-push" th:text="'results: ' + ${allRecipes.size()}"></span>
+
     <table class="table">
         <tr>
             <th>Recipe Name</th>
@@ -28,7 +30,6 @@
                    th:text="${recipe.recipeName}"></a></td>
         </tr>
     </table>
-
 
 </div>
 
