code smell resolved with fragment for recipeforms

--- a/src/main/resources/templates/updateRecipeForm.html
+++ b/src/main/resources/templates/updateRecipeForm.html
@@ -46,23 +46,7 @@
         <div class="updateRecipe">
             <form class="has-validation" th:action="@{/recipes/update/{recipeName}(recipeName=${recipeDTO.recipeName})}"
                   method="post" th:object="${recipeDTO}">
-                <div class="form-group">
-                    <label for="name">Name</label>
-                    <input type="text" class="form-control form-control-with" id="name" th:field="*{recipeName}" required>
-                </div>
-                <div class="form-group" th:each="step, iter : ${recipeDTO.steps}">
-                    <label for="step1" th:text="'Step ' + ${iter.index + 1}"></label>
-                    <input type="text" class="form-control form-control-with" th:field="*{steps[__${iter.index}__]}" id="step1" />
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary" name="add">Add Step</button>
-                </div>
-                <div class="form-group">
-                    <button type="submit" class="btn btn-primary" name="save">Save</button>
-                </div>
-                <div th:if="${existingRecipe != null}" class="alert alert-danger notification" role="alert">
-                    <p th:text="${existingRecipe.recipeName} + ' already exists'"></p>
-                </div>
+                <div th:replace="fragments/forms :: recipeForm"></div>
             </form>
         </div>
 
