authenticated new recipe, refactored to consistent url names and reorganized redirects

--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -20,7 +20,7 @@
         <a class="nav-link" th:href="@{/recipes}">Recipes</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link" th:href="@{/recipes/new}" sec:authorize="isAuthenticated()">New</a>
+        <a class="nav-link" th:href="@{/recipe/new}" sec:authorize="isAuthenticated()">New</a>
       </li>
       <li class="nav-item active">
         <a class="nav-link" th:href="@{/MyKitchen}" sec:authorize="isAuthenticated()">My Kitchen</a>
