--- a/src/main/resources/templates/recipeOverview.html
+++ b/src/main/resources/templates/recipeOverview.html
@@ -9,8 +9,7 @@
 
     <div th:replace="fragments/general :: headerPhoto"></div>
     <div th:replace="fragments/general :: navbar"></div>
-    <h1>Recipes</h1>
-
+    <h1>Browse all recipes</h1>
 
     <form class="searchRecipe" th:action="@{/recipes/search}">
         <input type="text" class="form-control" name="keyword"/>
@@ -22,9 +21,7 @@
     <span class="navbar-push" th:text="'results: ' + ${allRecipes.size()}"></span>
 
     <table class="table">
-        <tr>
-            <th>Recipe Name</th>
-        </tr>
+
         <tr th:each="recipe : ${allRecipes}">
             <td><a th:href="@{/recipes/{recipeName}(recipeName=${recipe.recipeName})}"
                    th:text="${recipe.recipeName}"></a></td>
