--- a/src/main/resources/templates/updateRecipeForm.html
+++ b/src/main/resources/templates/updateRecipeForm.html
@@ -7,7 +7,10 @@
 
 <div class="container">
 
-    <div th:replace="fragments/general :: headerPhoto"></div>
+    <div th:replace="fragments/general :: headerPhoto">
+
+
+    </div>
     <div th:replace="fragments/general :: navbar"></div>
 
     <div class="flex">
