--- a/src/main/resources/static/css/socialmeals.css
+++ b/src/main/resources/static/css/socialmeals.css
@@ -21,15 +21,21 @@ body {
     width: 70%;
     height: auto;
     margin-left: 15%;
-    text-align: center;
+    text-align: left;
     padding: 100px;
 }
 
 h1 {
     font-size: 30pt;
     font-family: Arial;
+    text-align: center;
     font-weight: 100;
     margin: 30px 0;
+}
+
+h2 {
+    font-size: 1rem;
+    text-align: center;
 }
 
 .navbar {
