--- a/src/main/resources/templates/updateRecipeForm.html
+++ b/src/main/resources/templates/updateRecipeForm.html
@@ -59,7 +59,7 @@
                   th:object="${ingredientRecipeDTO}">
                 <div class="form-group">
                     <label for="quantity">Quantity</label>
-                    <input class="form-control form-control-with" type="number" step="0.1" id="quantity" th:field="*{quantity}">
+                        <input class="form-control form-control-with" type="number" min="0.1" step="0.1" id="quantity" th:field="*{quantity}">
                 </div>
 
                 <div class="form-group">
