--- a/src/main/resources/static/css/socialmeals.css
+++ b/src/main/resources/static/css/socialmeals.css
@@ -5,24 +5,20 @@ body {
     font-weight: 400;
     line-height: 1.5;
     color: #212529;
-    background-color: #f7f7f7;
-}
-
-.header-photo {
-    background-image: url("https://cdn.pixabay.com/photo/2016/11/23/18/31/pasta-1854245_960_720.jpg");
-    width: 122%;
-    height: 20em;
-    margin-left: -11%;
-    margin-top: -15%;
 }
 
 .container {
     background-color: white;
-    width: 70%;
+    width: 60%;
     height: auto;
-    margin-left: 15%;
     text-align: left;
-    padding: 100px;
+}
+
+.header-photo {
+    background-image: url("https://upload.wikimedia.org/wikipedia/commons/e/e5/Thai_green_chicken_curry_and_roti.jpg");
+    background-size: 100%;
+    width: 100%;
+    height: 20em;
 }
 
 h1 {
@@ -30,7 +26,6 @@ h1 {
     font-family: Arial;
     text-align: center;
     font-weight: 100;
-    margin: 30px 0;
 }
 
 h2 {
@@ -41,16 +36,12 @@ h2 {
 .navbar {
     background-color: white;
     width: 100%;
-    margin-top: -10%;
-    padding: 2%;
+    margin-top: -7.5%;
+    margin-bottom: 5%;
 }
 
-.navbar li {
-    margin: 0 10px;
-}
-
-.navbar-push {
-    margin-left: 40%;
+.navbar a:hover {
+    font-weight: bold;
 }
 
 .flex {
