--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -13,7 +13,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light" th:fragment="navbar">
 
-  <div class="collapse navbar-collapse">
+  <div class="collapse navbar-collapse d-flex">
     <ul class="navbar-nav mr-auto">
 
       <li class="nav-item active">
@@ -27,7 +27,7 @@
       </li>
       </ul>
 
-    <ul class="navbar-nav mr-auto navbar-push">
+    <ul class="navbar-nav">
       <li class="nav-item active">
         <a class="nav-link" th:href="@{/user/new}" sec:authorize="isAnonymous()">Register</a>
       </li>
