--- a/src/main/resources/templates/recipeForm.html
+++ b/src/main/resources/templates/recipeForm.html
@@ -14,9 +14,11 @@
 
 
     <form class="has-validation" th:action="@{/recipe/new/newRecipe}" method="post" th:object="${recipeDTO}">
-        
-        <div th:replace="fragments/forms :: recipeForm"></div>
-
+    <div class="row form-control-height">
+        <div class="col-8">
+            <div th:replace="fragments/forms :: recipeForm"></div>
+        </div>
+    </div>
     </form>
 </div>
 
