--- a/src/main/resources/templates/recipeOverview.html
+++ b/src/main/resources/templates/recipeOverview.html
@@ -18,7 +18,7 @@
 
     <br>
 
-    <span class="navbar-push" th:text="'results: ' + ${allRecipes.size()}"></span>
+    <span class="searchResults" th:text="'results: ' + ${allRecipes.size()}"></span>
 
     <table class="table">
 
