--- a/src/main/resources/static/css/socialmeals.css
+++ b/src/main/resources/static/css/socialmeals.css
@@ -4,7 +4,6 @@ body {
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
-    color: #212529;
 }
 
 .container {
@@ -33,6 +32,10 @@ h2 {
     text-align: center;
 }
 
+h3 {
+    font-size: 1.5rem;
+}
+
 .navbar {
     background-color: white;
     width: 100%;
@@ -44,47 +47,16 @@ h2 {
     font-weight: bold;
 }
 
-.flex {
-    display: flex;
+.searchResults {
+    margin-left: 90%;
 }
 
-.recipeSteps {
-    width: 50%;
+.form-control-width{
+    width: 80%;
 }
 
-.recipeIngredients {
-    margin-left: 10%;
-    width: 30%;
-}
-
-.updateRecipe {
-    margin-left: 10%;
-    width: 100%;
-}
-
-.updateIngredients {
-    width: 100%;
-    margin-right: -20%;
-}
-
-.existingRecipe {
-    margin-top: 5%;
-    margin-left: 10%;
-    width: 30%;
-}
-
-.addedIngredients {
-    margin-top: 5%;
-    margin-left: 20%;
-    width: 40%;
-}
-
-.form-group {
-    text-align: left;
-}
-
-.form-control-with{
-    width: 40%;
+.form-control-height {
+    margin-top: 2rem;
 }
 
 .searchRecipe {
