--- a/src/main/resources/templates/fragments/forms.html
+++ b/src/main/resources/templates/fragments/forms.html
@@ -12,11 +12,11 @@
     <div th:fragment="recipeForm">
         <div class="form-group">
             <label for="name">Name</label>
-            <input type="text" class="form-control form-control-with" id="name" th:field="*{recipeName}" required>
+            <input type="text" class="form-control form-control-width" id="name" th:field="*{recipeName}" required>
         </div>
         <div class="form-group" th:each="step, iter : ${recipeDTO.steps}">
             <label for="step1" th:text="'Step ' + ${iter.index + 1}"></label>
-            <input type="text" class="form-control form-control-with" th:field="*{steps[__${iter.index}__]}" id="step1" />
+            <input type="text" class="form-control form-control-width" th:field="*{steps[__${iter.index}__]}" id="step1" />
         </div>
         <div class="form-group">
             <button type="submit" class="btn btn-primary" name="add">Add Step</button>
