SM-32 minor changes sort buttons recipe overview page

--- a/src/main/resources/templates/recipeOverview.html
+++ b/src/main/resources/templates/recipeOverview.html
@@ -19,12 +19,12 @@
     <br>
 
     <div class="row no-gutters">
-        <form class="col-2" th:action="@{/recipes/asc}">
-            <input class="btn btn-outline-secondary" type="submit" value="Recipe (A-Z)">
+        <form class="col-1" th:action="@{/recipes/asc}">
+            <input class="btn btn-outline-secondary" type="submit" value="A-Z">
         </form>
 
-        <form class="col-2" th:action="@{/recipes/desc}">
-            <input class="btn btn-outline-secondary" type="submit" value="Recipe (Z-A)">
+        <form class="col-1" th:action="@{/recipes/desc}">
+            <input class="btn btn-outline-secondary" type="submit" value="Z-A">
         </form>
 
     </div>
