--- a/src/main/resources/templates/fragments/general.html
+++ b/src/main/resources/templates/fragments/general.html
@@ -11,7 +11,7 @@
 
 <div class="header-photo" th:fragment="headerPhoto"></div>
 
-<nav class="navbar navbar-expand-lg navbar-light" th:fragment="navbar">
+<nav class="navbar navbar-expand-lg navbar-light shadow-sm p-3 mb-5 bg-white rounded" th:fragment="navbar">
 
   <div class="collapse navbar-collapse d-flex">
     <ul class="navbar-nav mr-auto">
